--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>This Dashboard doesn't exist.</title>
+  <title>404.</title>
   <style>
     body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
     div.dialog {
@@ -19,8 +19,9 @@
 <body>
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <h1>Drats! That Dashboard doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+    <h1>404.</h1>
+    <p>You may have mistyped the address or successfully logged out.</p>
+    <p><a href="http://127.0.0.1:3030/test">Click here to login</a></p>
   </div>
 </body>
 </html>
